changing domain of website

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shoppingcart",
   "private": true,
-  "homepage": "https://github.com/Youssef-Elouasbi/ShoppingCart",
+  "homepage": "http://Youssef-Elouasbi.github.io/ShoppingCart",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
